--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,12 @@ body {
   min-height: 2000px;
   padding-top: 70px;
 }
+
+.navbar-fixed-top {
+  height: 60px;
+}
+
+#main-logo {
+  height: 50px;
+  max-height: 45px;
+}
