--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,18 @@
 body {
   min-height: 2000px;
-  padding-top: 70px;
+  padding-top: 100px;
 }
 
+.navbar > .container {
+  width:auto;
+  padding-top: 5px;
+  padding-bottom: 10px;}
+
 .navbar-fixed-top {
-  height: 60px;
+  height: 80px;
 }
 
 #main-logo {
-  height: 50px;
-  max-height: 45px;
+  max-width: 300px;
+
 }
