--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,24 @@
 body {
   min-height: 2000px;
   padding-top: 70px;
+
 }
 
-.navbar-fixed-top {
-  height: 60px;
+.navbar {
+  height: 80px;
+  min-width: 300px;
 }
 
 #main-logo {
-  height: 50px;
-  max-height: 45px;
+
+  height: 60px;
+  max-height: 60px;
+  min-height: 30px;
+  min-width: 30%;
+  max-width: 100%;
+}
+
+.navbar .dropdown-toggle{
+   padding-top: 50px;
+    padding-left: 50px;
 }
