--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ a:focus {
 
 .navbar-custom {
     margin-bottom: 0;
-    border-bottom: 1px solid rgba(255,255,255,.3);
+    /*border-bottom: 1px solid rgba(255,255,255,.3);*/
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     background-color: #000;
@@ -81,7 +81,7 @@ a:focus {
 
 .navbar-header {
     margin-bottom: 0;
-    border-bottom: 1px solid rgba(255,255,255,.3);
+    /*border-bottom: 1px solid rgba(255,255,255,.3);*/
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     /*background-color: #000;*/
@@ -384,6 +384,6 @@ body {
 
 #main-logo {
   width: 100% \9;
-  max-width: 40%;
+  max-width: 400px;
 
 }
