--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ h4,
 h5,
 h6 {
     margin: 0 0 35px;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
@@ -121,7 +121,7 @@ a:focus {
 .navbar-custom .nav li a:focus,
 .navbar-custom .nav li a.active {
     outline: 0;
-    background-color: rgba(255,255,255,.3);
+    background-color: rgba(218, 41, 28, 0.30);
 }
 
 @media(min-width:767px) {
@@ -141,7 +141,7 @@ a:focus {
     }
 
     .navbar-custom.top-nav-collapse {
-        border-bottom: 1px solid rgba(255,255,255,.3);
+        border-bottom: 1px solid rgba(218, 41, 28, 0.30);
     }
 }
 
@@ -190,7 +190,7 @@ a:focus {
 .btn-circle {
     width: 70px;
     height: 70px;
-    margin-top: 15px;
+    margin-top: 50px;
     padding: 7px 16px;
     border: 2px solid #fff;
     border-radius: 35px;
