--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Lora, "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #fff;
     background-color: #000;
 }
@@ -19,15 +19,17 @@ h5,
 h6 {
     margin: 0 0 35px;
     /*text-transform: uppercase;*/
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
+    -webkit-font-smoothing: antialiased;
 }
 
-h1{
-    font-size: 48px;
+h1 {
+    font-size: 50px;
 }
-h2{
+
+h2 {
     font-size: 32px;
     color: #DA291C;
 }
@@ -36,6 +38,7 @@ p {
     margin: 0 0 25px;
     font-size: 18px;
     line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
 }
 
 #terms h3 {
@@ -50,17 +53,18 @@ p {
     color: #DA291C;
 }
 
-@media(min-width:550px) {
+@media (min-width: 550px) {
     p {
         margin: 0 0 35px;
         font-size: 20px;
         line-height: 1.6;
     }
+
     .navbar.navbar-default {
-        position:fixed;
-        top:0;
-        left:0;
-        z-index:1030;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1030;
 
     }
 }
@@ -82,11 +86,11 @@ a:focus {
     font-weight: 400;
 }
 
-@navbar-height: 150px;
-@navbar-brand-padding: 30px;
+@navbar-height : 150px;
+@navbar-brand-padding : 30px;
 
 .navbar-brand img {
-    height: @navbar-height - @navbar-brand-vpadding * 2;
+    height: @navbar-height -@navbar-brand-vpadding *2;
     position: absolute;
     top: @navbar-brand-vpadding;
     max-width: 45%;
@@ -94,9 +98,8 @@ a:focus {
 
 .navbar-custom {
     margin-bottom: 0;
-    background-color: rgba(218, 41, 28, 0.30);
-    /*text-transform: uppercase;*/
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    border-bottom: 1px solid #DA291C text-transform : uppercase;
+    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
     background-color: #000;
 }
 
@@ -104,7 +107,7 @@ a:focus {
     margin-bottom: 0;
     /*border-bottom: 1px solid rgba(255,255,255,.3);*/
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
     /*background-color: #000;*/
 }
 
@@ -144,40 +147,22 @@ a:focus {
     transition: background .3s ease-in-out;
 }
 
-.navbar-custom .nav li a:hover {
-    outline: 0;
-    color: rgba(255,255,255,.8);
-    background-color: transparent;
-}
-
+.navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus,
-.navbar-custom .nav li a:active {
+.navbar-custom .nav li a.active {
     outline: 0;
-    background-color: transparent;
-}
-
-.navbar-custom .nav li.active {
-    outline: 0;
-}
-
-.navbar-custom .nav li.active a {
     background-color: rgba(218, 41, 28, 0.30);
 }
 
-.navbar-custom .nav li.active a:hover {
-    color: #fff;
-}
-
-
-@media(min-width:767px) {
+@media (min-width: 767px) {
     .navbar {
         padding: 20px 0;
         border-bottom: 0;
         letter-spacing: 1px;
         background: 0 0;
-        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        transition: background .5s ease-in-out,padding .5s ease-in-out;
+        -webkit-transition: background .5s ease-in-out, padding .5s ease-in-out;
+        -moz-transition: background .5s ease-in-out, padding .5s ease-in-out;
+        transition: background .5s ease-in-out, padding .5s ease-in-out;
     }
 
     .top-nav-collapse {
@@ -217,7 +202,7 @@ a:focus {
     font-size: 18px;
 }
 
-@media(min-width:767px) {
+@media (min-width: 767px) {
     .intro {
         height: 100%;
         padding: 0;
@@ -251,7 +236,7 @@ a:focus {
 .btn-circle:focus {
     outline: 0;
     color: #fff;
-    background: rgba(255,255,255,.1);
+    background: rgba(255, 255, 255, .1);
 }
 
 .btn-circle i.animated {
@@ -273,37 +258,61 @@ a:focus {
 }
 
 @-webkit-keyframes pulse {
-    0 {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-    }
 
-    50% {
-        -webkit-transform: scale(1.2);
-        transform: scale(1.2);
-    }
+0
+{
+    -webkit-transform: scale(1)
+;
+    transform: scale(1)
+;
+}
 
-    100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-    }
+50
+%
+{
+    -webkit-transform: scale(1.2)
+;
+    transform: scale(1.2)
+;
+}
+
+100
+%
+{
+    -webkit-transform: scale(1)
+;
+    transform: scale(1)
+;
+}
 }
 
 @-moz-keyframes pulse {
-    0 {
-        -moz-transform: scale(1);
-        transform: scale(1);
-    }
 
-    50% {
-        -moz-transform: scale(1.2);
-        transform: scale(1.2);
-    }
+0
+{
+    -moz-transform: scale(1)
+;
+    transform: scale(1)
+;
+}
 
-    100% {
-        -moz-transform: scale(1);
-        transform: scale(1);
-    }
+50
+%
+{
+    -moz-transform: scale(1.2)
+;
+    transform: scale(1.2)
+;
+}
+
+100
+%
+{
+    -moz-transform: scale(1)
+;
+    transform: scale(1)
+;
+}
 }
 
 .content-section {
@@ -316,7 +325,7 @@ a:focus {
     margin-top: 20px;
 }
 
-@media(min-width:767px) {
+@media (min-width: 767px) {
     .content-section {
         padding-top: 120px;
     }
@@ -333,7 +342,7 @@ a:focus {
 
 .btn {
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 400;
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
@@ -354,8 +363,7 @@ a:focus {
     background-color: #DA291C;
 }
 
-
-@media(max-width:767px) {
+@media (max-width: 767px) {
     ul.banner-social-buttons li {
         display: block;
         margin-bottom: 20px;
@@ -378,13 +386,13 @@ footer p {
 ::-moz-selection {
     text-shadow: none;
     background: #fcfcfc;
-    background: rgba(255,255,255,.2);
+    background: rgba(255, 255, 255, .2);
 }
 
 ::selection {
     text-shadow: none;
     background: #fcfcfc;
-    background: rgba(255,255,255,.2);
+    background: rgba(255, 255, 255, .2);
 }
 
 img::selection {
@@ -396,57 +404,75 @@ img::-moz-selection {
 }
 
 body {
-    webkit-tap-highlight-color: rgba(255,255,255,.2);
+    webkit-tap-highlight-color: rgba(255, 255, 255, .2);
 }
 
 #main-logo {
-  width: 400px;
-  max-width: 85%;
+    width: 400px;
+    max-width: 85%;
 
 }
 
 .videoWrapper {
-	position: relative;
-	padding-bottom: 56.25%; /* 16:9 */
-	padding-top: 25px;
-	height: 0;
-}
-.videoWrapper iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
 }
 
-@media (max-width:1000px) {
-    .navbar-header { float: none }
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+@media (max-width: 1000px) {
+    .navbar-header {
+        float: none
+    }
+
     .navbar-left,
-    .navbar-right { float: none !important }
-    .navbar-toggle { display: block }
+    .navbar-right {
+        float: none !important
+    }
+
+    .navbar-toggle {
+        display: block
+    }
+
     .navbar-collapse {
         border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
         overflow: hidden;
     }
+
     .navbar-fixed-top {
         top: 0;
         border-width: 0 0 1px;
     }
+
     .navbar-collapse.collapse {
-        display: none!important;
-        visibility: hidden!important;
-        height: 0px!important;
+        display: none !important;
+        visibility: hidden !important;
+        height: 0px !important;
     }
+
     .navbar-nav {
-        float: none!important;
+        float: none !important;
         margin-top: 7.5px;
     }
-    .navbar-nav>li { float: none }
-    .navbar-nav>li>a {
+
+    .navbar-nav > li {
+        float: none
+    }
+
+    .navbar-nav > li > a {
         padding-top: 10px;
         padding-bottom: 10px;
     }
+
     .navbar-collapse.in {
         -webkit-transition-timing-function: ease;
         -o-transition-timing-function: ease;
@@ -463,6 +489,7 @@ body {
         overflow: visible !important;
         visibility: visible !important;
     }
+
     .navbar-nav .open .dropdown-menu {
         position: static;
         float: none;
@@ -473,43 +500,70 @@ body {
         -webkit-box-shadow: none;
         box-shadow: none;
     }
+
     .navbar-nav .open .dropdown-menu > li > a,
-    .navbar-nav .open .dropdown-menu .dropdown-header { padding: 5px 15px 5px 25px }
-    .navbar-nav .open .dropdown-menu > li > a { line-height: 20px }
+    .navbar-nav .open .dropdown-menu .dropdown-header {
+        padding: 5px 15px 5px 25px
+    }
+
+    .navbar-nav .open .dropdown-menu > li > a {
+        line-height: 20px
+    }
+
     .navbar-nav .open .dropdown-menu > li > a:hover,
-    .navbar-nav .open .dropdown-menu > li > a:focus { background-image: none }
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a { color: #777 }
+    .navbar-nav .open .dropdown-menu > li > a:focus {
+        background-image: none
+    }
+
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+        color: #777
+    }
+
     .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
     .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
         color: #333;
         background-color: transparent;
     }
+
     .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
     .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
     .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
         color: #555;
         background-color: #e7e7e7;
     }
+
     .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a,
     .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover,
     .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:focus {
         color: #ccc;
         background-color: transparent;
     }
-    .navbar-inverse .navbar-nav .open .dropdown-menu > .dropdown-header { border-color: #080808 }
-    .navbar-inverse .navbar-nav .open .dropdown-menu .divider { background-color: #080808 }
-    .navbar-inverse .navbar-nav .open .dropdown-menu > li > a { color: #9d9d9d }
+
+    .navbar-inverse .navbar-nav .open .dropdown-menu > .dropdown-header {
+        border-color: #080808
+    }
+
+    .navbar-inverse .navbar-nav .open .dropdown-menu .divider {
+        background-color: #080808
+    }
+
+    .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
+        color: #9d9d9d
+    }
+
     .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
     .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
         color: #fff;
         background-color: transparent;
     }
+
     .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a,
     .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:hover,
     .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:focus {
         color: #fff;
         background-color: #080808;
     }
+
     .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a,
     .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a:hover,
     .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a:focus {
@@ -528,24 +582,25 @@ body {
     padding-bottom: 10%;
 }
 
-#team .thumbnail{
+#team .thumbnail {
     width: 70%;
     background-color: transparent;
     border-color: transparent;
 }
-#team .caption{
+
+#team .caption {
     color: slategrey;
 }
 
 #team .thumbnail:focus,
-#team .thumbnail:hover{
+#team .thumbnail:hover {
     border: 1px solid #DA291C;
     outline: 0;
     cursor: pointer !important;
 }
 
 #team .thumbnail:focus,
-#team .thumbnail:hover > .caption{
+#team .thumbnail:hover > .caption {
     color: #DA291C;
 }
 
@@ -555,4 +610,69 @@ body {
     z-index: 1000;
 }
 
-a.speaker_click:hover { cursor: pointer; }
+.post-content {
+    background: none repeat scroll 0 0 #FFFFFF;
+    opacity: 0.5;
+    top: 0;
+    left: 0;
+    position: absolute;
+}
+
+.thumbnail {
+    position: relative;
+}
+
+div.window {
+    color: white;
+    text-align: center;
+    margin: 0 auto;
+    max-width: 85%;
+    /*background-color: red;*/
+}
+
+div.window label {
+    display: inline-table;
+    background: #DA291C;
+    border-radius: 5px;
+    width: 16%;
+    padding: 10px;
+    transition: top 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
+}
+
+div.window label:hover {
+    cursor: pointer;
+}
+
+/*#sue + #mathias + #tim + */
+#speakers label:after {
+    content: "Bio"
+}
+
+#speakers input:checked + label:after {
+    content: "Close"
+}
+
+
+input.toggle ~ div {
+    height: 0;
+    overflow: hidden;
+    /*transition: .6s all cubic-bezier(0.730, -0.485, 0.145, 1.620)*/
+
+}
+
+input.toggle:checked ~ div {
+    height: auto;
+    /*background-color: white;*/
+    /*color: #000000;*/
+
+}
+
+input.toggle:checked + label {
+    background: darkgrey;
+    content: "Close"
+
+}
+
+input.toggle {
+    display: none;
+}
