--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,10 @@ h2 {
     font-size: 32px;
     color: #DA291C;
 }
-
+h4 {
+    font-size: 24px;
+    color: #DA291C;
+}
 p {
     margin: 0 0 25px;
     font-size: 18px;
@@ -147,11 +150,27 @@ a:focus {
     transition: background .3s ease-in-out;
 }
 
-.navbar-custom .nav li a:hover,
-.navbar-custom .nav li a:focus,
-.navbar-custom .nav li a.active {
+.navbar-custom .nav li a:hover {
     outline: 0;
+    background-color: rgba(218, 41, 28, 0.90);
+}
+
+.navbar-custom .nav li a:focus,
+.navbar-custom .nav li a:active {
+    outline: 0;
+    background-color: transparent;
+}
+
+.navbar-custom .nav li.active {
+    outline: 0;
+}
+
+.navbar-custom .nav li.active a {
     background-color: rgba(218, 41, 28, 0.30);
+}
+
+.navbar-custom .nav li.active a:hover {
+    background-color: rgba(218, 41, 28, 0.90);
 }
 
 @media (min-width: 767px) {
@@ -316,7 +335,7 @@ a:focus {
 }
 
 .content-section {
-    padding-top: 50px;
+    padding: 10px;
 }
 
 #GoogleMap {
@@ -614,7 +633,7 @@ div.window label {
     display: inline-table;
     background: #DA291C;
     border-radius: 5px;
-    width: 16%;
+    /*width: 20%;*/
     padding: 10px;
     transition: top 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
 }
@@ -629,7 +648,7 @@ div.window label:hover {
 
 /*#sue + #mathias + #tim + */
 #speakers label:after {
-    content: "Bio"
+    content: "Click for full Biography"
 }
 
 #speakers input:checked + label:after {
@@ -660,3 +679,10 @@ div.window label:hover {
     display: none;
 }
 
+.img-responsive{
+    margin: 0 auto;
+}
+
+address{
+    font-size: 20px;
+}
